<resources>
    <string name="app_name">Tip Time</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="como_foi_o_atendimento">Como foi o Atendimento?</string>
    <string name="calculate">CALCULATE</string>
    <string name="pre_o_do_servi_o">Preço do Serviço</string>
    <string name="gostaria_de_arredondar">Gostaria de arredondar?</string>
    <string name="valor">Valor: %s</string>

</resources>